--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <nav>
       <h2>nav</h2>
-      <!-- <a href="#main-content">skip navigation</a> -->
+      <a href="#main-content">skip navigation</a>
       <ul>
         <li>nav item</li>
         <li>nav item</li>
